Refactoring of Module Loading API (#211)
* Refactored the module loading and data binding layers of the library. The result is a much cleaner API that should perform better overall, due to shorter code paths. This version is much more expansible and enabled dynamic compilation of module classes to be disabled by default. 
* Added a builder pattern to use in creating an IBindingContext with common options.
* Reformatted code.